OldRegularMessageDividers.css
.groupStart-23k01U {
    position: relative;
}

.groupStart-23k01U::after {
    position: absolute;
    left: 1rem;
    right: .875rem;
    content: "";
    height: 1px;
    background-color: var(--background-modifier-accent);
}

.group-spacing-0 .groupStart-23k01U::after {
    top: -1px;
}

.group-spacing-4 .groupStart-23k01U::after {
    top: calc(-.15625rem - 1px);
}

.group-spacing-8 .groupStart-23k01U::after {
    top: calc(-.28125rem - 1px);
}

.group-spacing-16 .groupStart-23k01U::after {
    top: calc(-.53125rem - 1px);
}

.group-spacing-24 .groupStart-23k01U::after {
    top: calc(-.78125rem - 1px);
}

.hasMore-3e72_v + .groupStart-23k01U::after,
.base-34jWEe + .groupStart-23k01U::after,
.welcomeMessage-3_Mcht + .groupStart-23k01U::after,
.divider-JfaTT5 + .groupStart-23k01U::after,
.expanded-13sWhZ .groupStart-23k01U:nth-child(2)::after {
    display: none;
}

